--- a/components/demo-app/staging/base/kustomization.yaml
+++ b/components/demo-app/staging/base/kustomization.yaml
@@ -1,11 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - https://github.com/redhat-appstudio/sprayproxy/config?ref=89addb463d3073b42a01636d6b9870d8aeb9f6d4
-  - pipelines-as-code-secret.yaml
-  - team-support-rbac.yaml
+  - https://github.com/prietyc123/demo-app/demo?ref=241121539309cb183a318943948ed74e05e764dd
 
 images:
   - name: ko://github.com/prietyc123/demo-app
-    newName: quay.io/redhat-appstudio/sprayproxy
-    newTag: 89addb463d3073b42a01636d6b9870d8aeb9f6d4
+    newName: quay.io/pkumari/demo-app-test
+    newTag: latest
